[gd_scene load_steps=10 format=3 uid="uid://dbbj0a21m0ifb"]

[ext_resource type="Script" uid="uid://l472prc5fdn7" path="res://old/weapons_item/sword_comp.gd" id="1_hxti8"]
[ext_resource type="Shader" uid="uid://cpibrbkoccd7b" path="res://shaders/square.gdshader" id="2_x11f4"]
[ext_resource type="Texture2D" uid="uid://dmo0rkd13p8i5" path="res://icon.svg" id="3_sdxpw"]
[ext_resource type="Animation" uid="uid://deemhjjg2be7y" path="res://animations/swing_2.res" id="4_xkrtq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5aucd"]
shader = ExtResource("2_x11f4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yu5g8"]
size = Vector2(12.7788, 148.522)

[sub_resource type="Animation" id="Animation_dm0rt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeAim/upgrade1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.06116]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodeAim/Node2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NodeAim/Node2D/upgrade2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-4.2045]
}

[sub_resource type="Animation" id="Animation_keoik"]
resource_name = "swing"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodeAim/upgrade1:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.00531, 1.13097]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_34nsk"]
_data = {
&"RESET": SubResource("Animation_dm0rt"),
&"swing": SubResource("Animation_keoik"),
&"swing_2": ExtResource("4_xkrtq")
}

[node name="sword" type="Marker2D"]
script = ExtResource("1_hxti8")

[node name="NodeAim" type="Node2D" parent="."]
rotation = 1.5708

[node name="upgrade1" type="Area2D" parent="NodeAim"]
unique_name_in_owner = true
position = Vector2(0, -15.055)
rotation = -1.06116
collision_layer = 4
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="NodeAim/upgrade1"]
material = SubResource("ShaderMaterial_5aucd")
position = Vector2(0, -84.0983)
scale = Vector2(0.1, 1.18904)
texture = ExtResource("3_sdxpw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodeAim/upgrade1"]
position = Vector2(-7.62939e-06, -84.1355)
scale = Vector2(1.01607, 1.01922)
shape = SubResource("RectangleShape2D_yu5g8")

[node name="Node2D" type="Node2D" parent="NodeAim"]
visible = false

[node name="upgrade2" type="Area2D" parent="NodeAim/Node2D"]
unique_name_in_owner = true
position = Vector2(62.0004, 109)
rotation = -4.2045
collision_layer = 0
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="NodeAim/Node2D/upgrade2"]
material = SubResource("ShaderMaterial_5aucd")
position = Vector2(0, -84.0983)
scale = Vector2(0.1, 1.18904)
texture = ExtResource("3_sdxpw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodeAim/Node2D/upgrade2"]
position = Vector2(-1.52588e-05, -84.1355)
scale = Vector2(1.01607, 1.01922)
shape = SubResource("RectangleShape2D_yu5g8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_34nsk")
}

[connection signal="body_entered" from="NodeAim/upgrade1" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="NodeAim/Node2D/upgrade2" to="." method="_on_area_2d_body_entered"]
